...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Gg-9w-2zQ">
                                <rect key="frame" x="234" y="143" width="54" height="30"/>
                                <animations/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="+1"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="YES"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="buttonCounterIncrement:" destination="BYZ-38-t0r" eventType="touchUpInside" id="12K-KA-IAJ"/>
                                </connections>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dYM-T5-yZd">
                                <rect key="frame" x="86" y="437" width="148" height="30"/>
                                <animations/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Go to next screen"/>
                                <connections>
                                    <action selector="buttonActionNextScreen:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Hs-hk-edM"/>
                                </connections>
                            </button>
                        </subviews>
                        <animations/>
...
