//
//  BasicCounterAppUITests.m
//  BasicCounterAppUITests
//
//  Created by Weboniselab on 30/09/15.
//  Copyright © 2015 Weboniselab. All rights reserved.
//

#import <XCTest/XCTest.h>

@interface BasicCounterAppUITests : XCTestCase

@end

@implementation BasicCounterAppUITests

- (void)setUp {
    [super setUp];
    
    // Put setup code here. This method is called before the invocation of each test method in the class.
    
    // In UI tests it is usually best to stop immediately when a failure occurs.
    self.continueAfterFailure = NO;
    // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
    [[[XCUIApplication alloc] init] launch];
    
    // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
}

- (void)tearDown {
    // Put teardown code here. This method is called after the invocation of each test method in the class.
    [super tearDown];
}

- (void)testExample {
    
    
    XCUIApplication *app = [[XCUIApplication alloc] init];
    XCUIElement *Button = app.buttons[@"+1"];
    [Button tap];
    [Button tap];
    [app.buttons[@"Go to next screen"] tap];
    [[[[app.navigationBars[@"SecondView"] childrenMatchingType:XCUIElementTypeButton] matchingIdentifier:@"Back"] elementBoundByIndex:0] tap];
    
}

@end
